--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         border-radius: 5px;
         font-weight: 900;
         border: none;
-        width: 21%;
+        width: auto;
         /* margin: 250px 100px 10px 10px; */
       }
 
@@ -154,7 +154,7 @@
         />
       </div>
       <button class="button">Learning</button>
-      <span>Published 11 Sept 2024</span>
+      <span>Published 15 Sept 2024</span>
       <article>
         <h3>HTML &amp; CSS foundations</h3>
         <h4>
@@ -162,17 +162,23 @@
           content, and presentation.
         </h4>
       </article>
-      <div class="profile">
-        <img src="assets/images/image-avatar.webp" alt="image" />
-        <p>Greg Hopper</p>
-      </div>
+      <main>
+        <section class="profile">
+          <!-- Using <section> to denote a standalone section within <main> -->
+          <img
+            src="assets/images/image-avatar.webp"
+            alt="image of Greg Hopper"
+          />
+          <p>Greg Hopper</p>
+        </section>
+      </main>
     </div>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Divine Basusi</a>.
+      >. Coded by <a href="#">Dgitial</a>.
     </div>
   </body>
 </html>
